--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                 <li class="li_php">PHP Basics</li>
                 <li class="li_sass">SASS</li>
                 <li class="li_bootstrap">Bootstrap 5</li>
+                <li class="">Webpack</li>
+                <li class="">Handlebars</li>
               </ul>
             </div>
             <!-- /.skills -->
